---------------------------------------------------------------------------------------------------
Version: 0.28.2
Date: 2025-11-30
  Balancing:
    - reduced beacon EM pollution (1->0.5)
    - reduced lab EM pollution (1->0.5)
    - any planet start: changed Pelagos space science recipe (water 20 -> 10)
    - added new required dependency: barreling group
---------------------------------------------------------------------------------------------------
Version: 0.28.1
Date: 2025-11-30
  Changes:
    - added warning communicate if pelagos and depths of nauvis are installed togeather, player start on nauvis, and oil patches are disabled on land. 
---------------------------------------------------------------------------------------------------
Version: 0.28.0
Date: 2025-11-29
  Bugfixes:
    - compatibilities with Arig now reference planetaris-arig not planetaris-unbounded 
    - any planet start: ice melting is unlocked on planet discovery fulgora and advanced 
      asteroid processing instead just on advanced asteroid processing to prevent lack of 
      ability to melt ice if player goes to fulgora before researching advanced asteroid processing
  Changes:
    - added technology: biodiesel 
    - added fluid: biodiesel with fuel value 0.8MJ
    - added recipe: biodiesel from tree seed
    - added recipe: biodiesel from bioflux
    - added recipe: solid fuel from biodiesel 
    - any planet start: planet discovery gleba now require biodiesel to be researched first
  Balancing:
    - reduced puff gas fuel value (0.8MJ -> 0.7MJ)
---------------------------------------------------------------------------------------------------
Version: 0.27.4
Date: 2025-11-28
  Bugfixes:
    - if fluid has fuel value equal 0 it will be treated like not having fuel value at all. 
      So game won't crash at startup if some mod decide to set fuel value to 0 instead of not setting or removing it