@@ -251,6 +251,8 @@ steam-assembling-machine-iron-pipe=Steam assembling machine
 pelagos-biodiesel-tree=Biodiesel from tree seed
 pelagos-biodiesel-bioflux=Biodiesel from bioflux
 pelagos-biodiesel-solid-fuel=Solid fuel from biodiesel
+cococoncrete=Cococoncrete
+pelagos-spoilage-concrete=Spoilage concrete
 
 [mod-setting-name]
 pelagos-allow-fishing=Allow inserters to catch fish (overrides cargo-ships settings)
