@@ -136,7 +136,10 @@ data:extend({
 	{
 		type = "recipe",
 		name = "calcite-concrete",
-		icon = "__pelagos__/graphics/calcite-concrete.png",
+		icons = {
+			{ icon = "__base__/graphics/icons/concrete.png", icon_size = 64 },
+			{ icon = "__space-age__/graphics/icons/calcite.png", icon_size = 64, scale = 0.3, shift = { 8, 8 } },
+		},
 		energy_required = 10,
 		enabled = false,
 		category = "crafting-with-fluid",
@@ -146,6 +149,44 @@ data:extend({
 			{ type = "fluid", name = "water", amount = 100 },
 		},
 		results = { { type = "item", name = "concrete", amount = 20 } },
+		auto_recycle = false,
+		allow_productivity = true,
+	},
+	{
+		type = "recipe",
+		name = "cococoncrete",
+		icons = {
+			{ icon = "__base__/graphics/icons/concrete.png", icon_size = 64 },
+			{ icon = "__pelagos__/graphics/coconut-husk.png", icon_size = 64, scale = 0.3, shift = { 8, 8 } },
+		},
+		energy_required = 10,
+		enabled = false,
+		category = "crafting-with-fluid",
+		ingredients = {
+			{ type = "item", name = "coconut-husk", amount = 10 },
+			{ type = "item", name = "iron-ore", amount = 1 },
+			{ type = "fluid", name = "water", amount = 100 },
+		},
+		results = { { type = "item", name = "concrete", amount = 10 } },
+		auto_recycle = false,
+		allow_productivity = true,
+	},
+	{
+		type = "recipe",
+		name = "pelagos-spoilage-concrete",
+		icons = {
+			{ icon = "__base__/graphics/icons/concrete.png", icon_size = 64 },
+			{ icon = "__space-age__/graphics/icons/spoilage.png", icon_size = 64, scale = 0.3, shift = { 8, 8 } },
+		},
+		energy_required = 10,
+		enabled = false,
+		category = "organic-or-assembling",
+		ingredients = {
+			{ type = "item", name = "spoilage", amount = 50 },
+			{ type = "item", name = "iron-ore", amount = 1 },
+			{ type = "fluid", name = "water", amount = 100 },
+		},
+		results = { { type = "item", name = "concrete", amount = 10 } },
 		auto_recycle = false,
 		allow_productivity = true,
 	},
