@@ -1,11 +1,15 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.28.2
 Date: 2025-11-30
+  Changes:
+    - added new required dependency: barreling group
+    - changed pelagos science pack technology graphic
+    - added cococoncrete recipe
+    - added spoilage concrete recipe
   Balancing:
     - reduced beacon EM pollution (1->0.5)
     - reduced lab EM pollution (1->0.5)
     - any planet start: changed Pelagos space science recipe (water 20 -> 10)
-    - added new required dependency: barreling group
 ---------------------------------------------------------------------------------------------------
 Version: 0.28.1
 Date: 2025-11-30
